load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/noxiouz/gcoredumper
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "gcoredumper_lib",
    srcs = ["main.go"],
    importpath = "github.com/noxiouz/gcoredumper",
    visibility = ["//visibility:private"],
    deps = [
        "//configuration/configurator",
        "//configuration/configurator/localfile",
        "//core",
        "//report",
        "@com_github_google_uuid//:uuid",
    ],
)

go_binary(
    name = "gcoredumper",
    embed = [":gcoredumper_lib"],
    visibility = ["//visibility:public"],
)
