load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//proto:compiler.bzl", "go_proto_compiler")

# gazelle:prefix github.com/noxiouz/gcoredumper
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "gcoredumper_lib",
    srcs = ["main.go"],
    importpath = "github.com/noxiouz/gcoredumper",
    visibility = ["//visibility:private"],
    deps = [
        "//configuration/configurator",
        "//configuration/configurator/localfile",
        "//core",
        "//report",
        "@com_github_google_uuid//:uuid",
    ],
)

go_binary(
    name = "gcoredumper",
    embed = [":gcoredumper_lib"],
    visibility = ["//visibility:public"],
)

go_proto_compiler(
    name = "golang_google_proto",
    plugin = "@org_golang_google_protobuf//cmd/protoc-gen-go",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
        "@org_golang_google_protobuf//runtime/protoiface",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/anypb",
    ],
)
