load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bpfbacktracer",
    srcs = ["prog.go"],
    importpath = "github.com/noxiouz/gcoredumper/bpfbacktracer",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_cilium_ebpf//:go_default_library",
        "@com_github_cilium_ebpf//asm:go_default_library",
        "@com_github_cilium_ebpf//link:go_default_library",
        "@org_golang_x_sys//unix:go_default_library",
    ],
)
