load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bpfbacktracer",
    srcs = ["prog.go"],
    importpath = "github.com/noxiouz/gcoredumper/bpfbacktracer",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_cilium_ebpf//:ebpf",
        "@com_github_cilium_ebpf//asm",
        "@com_github_cilium_ebpf//link",
        "@org_golang_x_sys//unix",
    ],
)
