load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "core",
    srcs = [
        "actions.go",
        "core.go",
        "process_info.go",
    ],
    importpath = "github.com/noxiouz/gcoredumper/core",
    visibility = ["//visibility:public"],
    deps = [
        "//bpfbacktracer",
        "//dumper",
        "//proto:configuration_go_proto",
        "//report",
        "//utils/buildid",
        "//utils/environ",
        "@com_github_spf13_afero//:afero",
        "@org_golang_x_sync//errgroup",
        "@org_golang_x_sys//unix",
    ],
)
