load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dumper",
    srcs = [
        "dumper.go",
        "util.go",
    ],
    importpath = "github.com/noxiouz/gcoredumper/dumper",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:configuration_go_proto",
        "//report",
        "//utils/xioutil",
        "@com_github_klauspost_compress//snappy:go_default_library",
        "@com_github_klauspost_compress//zstd:go_default_library",
        "@com_github_spf13_afero//:go_default_library",
        "@org_golang_x_sys//unix:go_default_library",
    ],
)

go_test(
    name = "dumper_test",
    srcs = ["dumper_test.go"],
    embed = [":dumper"],
    deps = [
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_klauspost_compress//snappy:go_default_library",
        "@com_github_klauspost_compress//zstd:go_default_library",
        "@com_github_spf13_afero//:go_default_library",
    ],
)
