load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dumper",
    srcs = [
        "dumper.go",
        "util.go",
    ],
    importpath = "github.com/noxiouz/gcoredumper/dumper",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:configuration_go_proto",
        "//report",
        "//utils/xioutil",
        "@com_github_klauspost_compress//snappy",
        "@com_github_klauspost_compress//zstd",
        "@com_github_spf13_afero//:afero",
        "@org_golang_x_sys//unix",
    ],
)

go_test(
    name = "dumper_test",
    srcs = ["dumper_test.go"],
    embed = [":dumper"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_klauspost_compress//snappy",
        "@com_github_klauspost_compress//zstd",
        "@com_github_spf13_afero//:afero",
    ],
)
