load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "configurator",
    srcs = ["configurator.go"],
    importpath = "github.com/noxiouz/gcoredumper/configuration/configurator",
    visibility = ["//visibility:public"],
    deps = [
        "//configuration:configuration_go_proto",
    ],
)
